clear scores button

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="scoreboard">
             <div>Player X: <span id="score-x">0</span></div>
             <div>Player O: <span id="score-o">0</span></div>
+            <button id="clear-scores">Clear Scores</button>
         </div>
         <div class="transition-screen" id="gameStartScreen">Game Start!</div>
     </div>
